welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value T
  T=col()
  ^Array1:15: error: class Array takes type parameters
def recop(h:Int,j:Int,l:Int,T:Array) {
                              ^Array1:11: error: not found: value T
    recop(h,j,l,T)
                ^Array1:15: error: class Array takes type parameters
def recop(h:Int,j:Int,l:Int,T:Array) {
                              ^